--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,29 @@
   <link rel="stylesheet" href="/css/base.css">
   <link rel="stylesheet" href="/css/layout.css">
 </head>
+
 <body>
-  <!-- Conteúdo da homepage -->
+  <header class="site-header">
+    <!-- Logo e navegação -->
+  </header>
+
+  <main>
+    <section class="hero-section">
+      <!-- Seção hero -->
+    </section>
+
+    <section class="categories-section">
+      <!-- Seção de categorias de tênis -->
+    </section>
+
+    <section class="featured-products-section">
+      <!-- Grid com produtos em destaque -->
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <!-- Informações de contato e links -->
+  </footer>
 </body>
+
 </html>
